# testclaude

./: README.md
V2/doc_agent_project/: README.md  pyproject.toml
V2/doc_agent_project/doc_agent/: __init__.py  agent.py  confidence.py  config.py  llm.py  prompts.py
V2/doc_agent_project/doc_agent/rag/: __init__.py  chunking.py  embeddings.py
V2/doc_agent_project/doc_agent/tools/: __init__.py  base.py
V2/doc_agent_project/examples/: run_example_openai.py  smoke_test.py
V2/doc_agent_project/tests/: test_core.py
v1/: README.md  agent.py
v1/doc_agent_project/: pyproject.toml
v1/doc_agent_project/doc_agent/: __init__.py  config.py  llm.py  models.py
v1/doc_agent_project/doc_agent/rag/: __init__.py  embeddings.py  index.py
v1/doc_agent_project/doc_agent/tools/: execution.py  retrieval.py
v1/doc_agent_project/examples/: run_example.py  smoke_test.py
v1/doc_agent_project/tests/: test_core.py
v3/: confidence.py
v3/doc_qa_agent/: README.md  pyproject.toml
v3/doc_qa_agent/doc_qa_agent/: __init__.py  agent.py  config.py  llm.py  models.py  prompts.py
v3/doc_qa_agent/doc_qa_agent/tools/: __init__.py  execution.py  repo.py  retrieval.py  storage.py
v3/doc_qa_agent/examples/: run_example.py
v4/: .env.example  README.md  agent.py  calibration.py  config.py  embeddings.py  llm.py  models.py  pipeline.py  pyproject.toml  rag.py  test_agent.py  tools.py
